@@ -22,21 +22,27 @@ package nl.rivm.screenit.main.service.algemeen.impl;
  */
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Optional;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import jakarta.persistence.criteria.From;
 
 import lombok.RequiredArgsConstructor;
 
+import nl.rivm.screenit.main.dto.algemeen.BrpGegevensDto;
 import nl.rivm.screenit.main.dto.algemeen.ClientZoekenFilterDto;
+import nl.rivm.screenit.main.dto.algemeen.TijdelijkAdresDto;
+import nl.rivm.screenit.main.mappers.algemeen.ClientMapper;
 import nl.rivm.screenit.main.service.algemeen.ClientZoekenService;
 import nl.rivm.screenit.model.Client;
 import nl.rivm.screenit.model.Client_;
+import nl.rivm.screenit.model.OrganisatieMedewerker;
 import nl.rivm.screenit.model.Persoon;
 import nl.rivm.screenit.model.Persoon_;
+import nl.rivm.screenit.model.TijdelijkGbaAdres;
 import nl.rivm.screenit.model.enums.Bevolkingsonderzoek;
 import nl.rivm.screenit.model.enums.GbaStatus;
 import nl.rivm.screenit.repository.algemeen.ClientRepository;
@@ -52,7 +58,7 @@ import org.springframework.stereotype.Service;
 import static nl.rivm.screenit.specification.SpecificationUtil.join;
 import static nl.rivm.screenit.specification.algemeen.AdresSpecification.heeftHuisnummer;
 import static nl.rivm.screenit.specification.algemeen.AdresSpecification.heeftPostcode;
-import static nl.rivm.screenit.specification.algemeen.ClientSpecification.heeftANummer;
+import static nl.rivm.screenit.specification.algemeen.ClientSpecification.filterOpANummer;
 import static nl.rivm.screenit.specification.algemeen.ClientSpecification.heeftBkUitnodigingsnummer;
 import static nl.rivm.screenit.specification.algemeen.ClientSpecification.heeftBmhkMonsterId;
 import static nl.rivm.screenit.specification.algemeen.ClientSpecification.heeftBmhkUitnodigingsId;
@@ -60,9 +66,9 @@ import static nl.rivm.screenit.specification.algemeen.ClientSpecification.heeftD
 import static nl.rivm.screenit.specification.algemeen.ClientSpecification.heeftDkUitnodigingsId;
 import static nl.rivm.screenit.specification.algemeen.ClientSpecification.heeftEmailadres;
 import static nl.rivm.screenit.specification.algemeen.ClientSpecification.heeftNietGbaStatussen;
-import static nl.rivm.screenit.specification.algemeen.PersoonSpecification.filterGeboortedatum;
 import static nl.rivm.screenit.specification.algemeen.PersoonSpecification.filterTelefoonNummer1;
 import static nl.rivm.screenit.specification.algemeen.PersoonSpecification.heeftBsn;
+import static nl.rivm.screenit.util.DateUtil.isGeboortedatumGelijk;
 
 @Service
 @RequiredArgsConstructor
@@ -71,6 +77,8 @@ public class ClientZoekenServiceImpl implements ClientZoekenService
 	private final ClientService clientService;
 
 	private final ClientRepository clientRepository;
+
+	private final ClientMapper clientMapper;
 
 	@Override
 	public List<Client> zoekClienten(ClientZoekenFilterDto filter)
@@ -101,7 +109,7 @@ public class ClientZoekenServiceImpl implements ClientZoekenService
 
 		if (StringUtils.isNotBlank(filter.getAnummer()))
 		{
-			specificaties.add(heeftANummer(filter.getAnummer()));
+			specificaties.add(filterOpANummer(filter.getAnummer()));
 		}
 
 		if (StringUtils.isNotBlank(filter.getMobielnummer()))
@@ -144,19 +152,24 @@ public class ClientZoekenServiceImpl implements ClientZoekenService
 			return List.of();
 		}
 
-		specificaties.add(filterGeboortedatum(DateUtil.toUtilDate(filter.getGeboortedatum())).with(persoonJoin()));
-
-		var statussen = new ArrayList<>(Arrays.asList((GbaStatus.BEZWAAR)));
+		var statussen = new ArrayList<>(List.of(GbaStatus.BEZWAAR));
 		if (!zijnGeavanceerdeVeldenGevuld(filter))
 		{
 			statussen.add(GbaStatus.AFGEVOERD);
 		}
 		specificaties.add(heeftNietGbaStatussen(statussen));
 
-		return clientRepository.findAll(specificaties.stream().reduce(Specification::and).orElseThrow())
+		var clienten = clientRepository.findAll(specificaties.stream().reduce(Specification::and).orElseThrow())
 			.stream()
 			.sorted(Comparator.comparingInt(client -> client.getGbaStatus() == GbaStatus.AFGEVOERD ? 1 : 0))
-			.toList();
+			.collect(Collectors.toList());
+
+		if (filter.getGeboortedatum() != null)
+		{
+			clienten.removeIf(client -> !isGeboortedatumGelijk(DateUtil.toLocalDate(filter.getGeboortedatum()), client));
+		}
+
+		return clienten;
 	}
 
 	@Override
@@ -182,6 +195,53 @@ public class ClientZoekenServiceImpl implements ClientZoekenService
 			actieveBvos.add(Bevolkingsonderzoek.MAMMA);
 		}
 		return actieveBvos;
+	}
+
+	@Override
+	public BrpGegevensDto getBrpGegevens(Long clientId)
+	{
+		return clientRepository.findById(clientId)
+			.map(clientMapper::clientToBrpDto)
+			.orElseThrow();
+	}
+
+	@Override
+	public TijdelijkAdresDto getBrpTijdelijkAdres(Long clientId)
+	{
+		return clientRepository.findById(clientId).flatMap(client -> Optional.ofNullable(client.getPersoon())
+				.filter(persoon -> persoon.getTijdelijkGbaAdres() != null)
+				.map(persoon -> clientMapper.clientToBrpTijdelijkAdres(client)))
+			.orElse(null);
+	}
+
+	@Override
+	public void saveBrpTijdelijkAdres(Long clientId, TijdelijkAdresDto tijdelijkAdresDto, OrganisatieMedewerker ingelogdeOrganisatieMedewerker)
+	{
+		var client = clientRepository.findById(clientId).orElseThrow();
+		var persoon = client.getPersoon();
+		var tijdelijkBrpAdres = Optional.ofNullable(persoon.getTijdelijkGbaAdres()).orElseGet(() ->
+		{
+			var nieuwTijdelijkAdres = new TijdelijkGbaAdres();
+			persoon.setTijdelijkGbaAdres(nieuwTijdelijkAdres);
+			return nieuwTijdelijkAdres;
+		});
+
+		tijdelijkBrpAdres.setStraat(tijdelijkAdresDto.getStraatnaam());
+		tijdelijkBrpAdres.setHuisnummer(tijdelijkAdresDto.getHuisnummer());
+		tijdelijkBrpAdres.setHuisletter(tijdelijkAdresDto.getHuisletter());
+		tijdelijkBrpAdres.setHuisnummerToevoeging(tijdelijkAdresDto.getHuisnummerToevoeging());
+		tijdelijkBrpAdres.setHuisnummerAanduiding(tijdelijkAdresDto.getAanduidingBijHuisnummer());
+		tijdelijkBrpAdres.setPostcode(tijdelijkAdresDto.getPostcode());
+		tijdelijkBrpAdres.setPlaats(tijdelijkAdresDto.getPlaats());
+
+		clientService.saveOrUpdateTijdelijkGbaAdres(client, ingelogdeOrganisatieMedewerker);
+	}
+
+	@Override
+	public void deleteBrpTijdelijkAdres(Long clientId, OrganisatieMedewerker ingelogdeOrganisatieMedewerker)
+	{
+		var client = clientRepository.findById(clientId).orElseThrow();
+		clientService.verwijderTijdelijkGbaAdres(client, ingelogdeOrganisatieMedewerker);
 	}
 
 	private static boolean zijnGeavanceerdeVeldenGevuld(ClientZoekenFilterDto filter)
